# snowball

./: .travis.yml  CMakeLists.txt  Doxyfile.in  README  README.md  index.html  params.json
nbproject/: configurations.xml  project.properties  project.xml
nbproject/private/: Default.properties  Test.properties  configurations.xml  private.xml
src/: version.h.in
src/collections/: list.hpp  string.cpp  string.h
src/exceptions/: exceptions.cpp  exceptions.h
src/snowball/: version.cpp  version.h
src/snowball/collections/: algorithms.hpp  dictionary.hpp  hash.hpp  iterator.h  list.hpp  string.cpp  string.h
src/snowball/decorators/: decorator.hpp  timeit.hpp
src/snowball/exceptions/: exceptions.cpp  exceptions.h
src/snowball/subprocess/: popen.cpp  popen.h
src/subprocess/: popen.cpp  popen.h
tests/: test.cpp  test_algorithms.h  test_decorators.cpp  test_dictionary.cpp  test_exceptions.h  test_hash.cpp  test_list.cpp  test_list.h  test_popen.cpp  test_popen.h  test_string.cpp  test_string.h  test_version.cpp  test_version.h
